--- a/Pages/disaster/profile/entrylog/Index.cshtml
+++ b/Pages/disaster/profile/entrylog/Index.cshtml
@@ -61,6 +61,9 @@
 						<a class="nav-link" href="/disaster/profile/staffassignment/index?centerLogID=@Model.logInfo.centerLogID">Staff Assignment</a>
 					</li>
 					<li class="nav-item">
+						<a class="nav-link" href="/disaster/profile/inventory/index?centerLogID=@Model.logInfo.centerLogID">Inventory</a>
+					</li>
+					<li class="nav-item">
 						<a class="nav-link" href="/disaster/profile/reliefgoodspack/index?centerLogID=@Model.logInfo.centerLogID">Relief Goods Pack</a>
 					</li>
 					<li class="nav-item">
@@ -79,17 +82,12 @@
 				<option value="/disaster/profile/informationboard/index?centerLogID=@Model.logInfo.centerLogID">Information Board</option>
 				<option value="/disaster/profile/entrylog/index?centerLogID=@Model.logInfo.centerLogID">Entry Log</option>
 				<option value="/disaster/profile/staffassignment/index?centerLogID=@Model.logInfo.centerLogID">Staff Assignment</option>
+				<option value="/disaster/profile/inventory/index?centerLogID=@Model.logInfo.centerLogID">Inventory</option>
 				<option value="/disaster/profile/reliefgoodspack/index?centerLogID=@Model.logInfo.centerLogID">Relief Goods Pack</option>
 				<option value="/disaster/profile/reliefdistribution/index?centerLogID=@Model.logInfo.centerLogID">Relief Distribution</option>
 				<option value="/disaster/profile/vulnerabilityassessment/index?centerLogID=@Model.logInfo.centerLogID">Vulnerability Assessment</option>
 			</select>
 		</div>
-
-		<style>
-			#checkOut{
-				padding:0px; /*to align the form to breadcrumb*/
-			}
-		</style>
 
 		<!-- Page Content -->
 		<div class="col-md-9 ms-sm-auto col-lg-10 px-md-4 pb-3 pt-3">
@@ -106,16 +104,15 @@
 					</nav>
 				</div>
 
-				<form method="POST" id="checkOut">
+				<form method="POST" id="checkOut" style="padding: 0px;">
 					<input type="hidden" name="centerLogID" value="@Model.logInfo.centerLogID" />
-
+					<!-- Title, Check-In and Check-Out Buttons -->
 					<div class="row pb-2">
 						<div class="col-12 d-flex justify-content-between align-items-center" style="gap: 5px">
 							<div class="d-flex align-items-center">
 								<h1>Entry Log</h1>
 							</div>
 
-							<!-- Check-In and Check-Out Buttons -->
 							<div class="d-flex justify-content-between align-items-center">
 								<a id="checkInButton" class="btn btn-primary mb-2" href="/disaster/profile/entrylog/checkin?centerLogID=@Model.logInfo.centerLogID">
 									<i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Check-in Evacuee
