--- a/Pages/disaster/profile/reliefgoodspack/Index.cshtml
+++ b/Pages/disaster/profile/reliefgoodspack/Index.cshtml
@@ -61,6 +61,9 @@
 						<a class="nav-link" href="/disaster/profile/staffassignment/index?centerLogID=@Model.logInfo.centerLogID">Staff Assignment</a>
 					</li>
 					<li class="nav-item">
+						<a class="nav-link" href="/disaster/profile/inventory/index?centerLogID=@Model.logInfo.centerLogID">Inventory</a>
+					</li>
+					<li class="nav-item">
 						<a class="nav-link" href="/disaster/profile/reliefgoodspack/index?centerLogID=@Model.logInfo.centerLogID">Relief Goods Pack</a>
 					</li>
 					<li class="nav-item">
@@ -73,19 +76,13 @@
 			</div>
 		</nav>
 
-		<style>
-			#sidebar {
-				padding-top: 30px;
-				padding-left: 20px;
-			}
-		</style>
-
 		<!-- Sidebar (mobile) -->
 		<div id="sidebarMobile" class="col-md-3 col-lg-2 d-md-none bg-light p-2">
 			<select class="form-select" id="pageSelect">
 				<option value="/disaster/profile/informationboard/index?centerLogID=@Model.logInfo.centerLogID">Information Board</option>
 				<option value="/disaster/profile/entrylog/index?centerLogID=@Model.logInfo.centerLogID">Entry Log</option>
 				<option value="/disaster/profile/staffassignment/index?centerLogID=@Model.logInfo.centerLogID">Staff Assignment</option>
+				<option value="/disaster/profile/inventory/index?centerLogID=@Model.logInfo.centerLogID">Inventory</option>
 				<option value="/disaster/profile/reliefgoodspack/index?centerLogID=@Model.logInfo.centerLogID">Relief Goods Pack</option>
 				<option value="/disaster/profile/reliefdistribution/index?centerLogID=@Model.logInfo.centerLogID">Relief Distribution</option>
 				<option value="/disaster/profile/vulnerabilityassessment/index?centerLogID=@Model.logInfo.centerLogID">Vulnerability Assessment</option>
