--- a/Pages/Disaster/Profile/Index.cshtml
+++ b/Pages/Disaster/Profile/Index.cshtml
@@ -82,7 +82,7 @@
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="recordOptions">
                     <li>
-                        <a class="dropdown-item" href="#">
+                        <a class="dropdown-item" href="/disaster/profile/report">
                             Generate Report
                         </a>
                     </li>
@@ -128,7 +128,7 @@
         </div>
 
         <div class="info-item">
-            <i class="bi bi-box-seam-fill"></i>
+            <i class="bi bi-buildings-fill"></i>
             <div class="text">
                 <h3>@Model.GetTotalDistinctBarangaysCount()</h3>
                 <p><b>Total Affected Barangays</b></p>
@@ -141,7 +141,7 @@
         </div>  
         
         <div class="info-item">
-            <i class="bi bi-people"></i>
+            <i class="bi bi-building-fill"></i></i>
             <div class="text">
                 <h3>@Model.GetTotalCenterCount()</h3>
                 <p><b>Total Evacuation Centers</b></p>
