--- a/Pages/disaster/profile/informationboard/Index.cshtml
+++ b/Pages/disaster/profile/informationboard/Index.cshtml
@@ -76,31 +76,31 @@
 					<div class="col-lg-12 ec-info">
 
                         <div>
-                            <h1>Sample Evacuation Center</h1>
-                            <p>123 Sample St., San Delmonte, Bulacan</p>
-                            <p>Gymnasium</p>
-                            <p>123-345-89 / 0917-123-1234</p>
+                            <h1>@Model.logInfo.centerName</h1>
+                            <p>City of San Jose del Monte, Bulacan</p>
+                            <p>Community-based EC</p>
+                            <p>044-840-8923 / 0917-437-1212</p>
                         </div>
 
                         <hr />
 
                         <p class="p-2">Assigned Staffs
-                            <span class="badge rounded-pill bg-primary pb-1">5</span>
+                            <span class="badge rounded-pill bg-primary pb-1">3</span>
                         </p>
                         <table class="table">
                             <tr>
                                 <th>Manager</th>
-                                <td>John Doe</td>
+                                <td>Ian Vincent C. Bartolome</td>
                             </tr>
                             <tr>
                                 <th>Assistant Manager</th>
-                                <td>Jane Smith</td>
+                                <td>Juan S. Dela Cruz Jr.</td>
                             </tr>
                             <tr>
                                 <th>EC Staff</th>
                                 <td>
                                     <ul style="list-style: none; padding: 0;">
-                                        <li>Robert Johnson</li>
+                                        <li>Aileen R. Tan</li>
                                         <li>Sarah Williams</li>
                                         <li>Michael Anderson</li>
                                         <!-- Add more staff members as needed -->
