Minor changes in "Edit" and "Delete" recordOptions

--- a/Pages/Disaster/Profile/Index.cshtml
+++ b/Pages/Disaster/Profile/Index.cshtml
@@ -88,13 +88,13 @@
                     </li>
                     <li>
                         <a class="dropdown-item" href="/disaster/profile/edit?disasterID=@Model.disasterInfo.disasterID">
-                            Edit Disaster Info
+                            Edit
                         </a>
                     </li>
                     <li>
                         <a href="#" class="text-danger dropdown-item" onclick="prepareDelete('@Model.disasterInfo.disasterID')"
                            data-deleteid="@Model.disasterInfo.disasterID" data-bs-toggle="modal" data-bs-target="#deleteConfirmationModal">
-                            Delete Disaster
+                            Delete
                         </a>
                     </li>
                 </ul>
