--- a/Pages/Family/Profile/Index.cshtml
+++ b/Pages/Family/Profile/Index.cshtml
@@ -75,13 +75,13 @@
 								</li>
 								<li>
 									<a class="dropdown-item" href="/family/profile/edit/family?familyID=@Model.familyInfo.familyID">
-										Edit Information
+										Edit Profile
 									</a>
 								</li>
 								<li>
 									<a href="#" class="text-danger dropdown-item" onclick="prepareDelete('@Model.familyInfo.familyID')"
 									   data-deleteid="@Model.familyInfo.familyID" data-bs-toggle="modal" data-bs-target="#deleteConfirmationModal">
-										Delete Family
+										Delete
 									</a>
 								</li>
 							</ul>
