--- a/Pages/disaster/profile/reliefdistribution/Index.cshtml
+++ b/Pages/disaster/profile/reliefdistribution/Index.cshtml
@@ -163,7 +163,7 @@
 													<li>
 														<a href="#" class="dropdown-item text-danger" onclick="prepareDelete('@item.distributionID')"
 														   data-deleteid="@item.distributionID" data-bs-toggle="modal" data-bs-target="#deleteConfirmationModal">
-															Delete Distribution Record
+															Delete
 														</a>
 													</li>
 												</ul>
