--- a/Pages/disaster/profile/inventory/Index.cshtml
+++ b/Pages/disaster/profile/inventory/Index.cshtml
@@ -153,13 +153,13 @@
 												<ul class="dropdown-menu" aria-labelledby="recordOptions">
 													<li>
 														<a class="dropdown-item" href="/disaster/profile/inventory/edit?packID=@item.inventoryID&centerLogID=@Model.logInfo.centerLogID">
-															Edit Item
+															Edit
 														</a>
 													</li>
 													<li>
 														<a href="#" class="dropdown-item text-danger" onclick="prepareDelete('@item.inventoryID')"
 														   data-deleteid="@item.inventoryID" data-bs-toggle="modal" data-bs-target="#deleteConfirmationModal">
-															Delete Item
+															Delete
 														</a>
 													</li>
 												</ul>
@@ -230,8 +230,8 @@
 		var table = $('#inventory-table').DataTable({
 			responsive: true,
 			columnDefs: [
-				{ "orderable": true, "targets": [0, 1, 2, 3] }, // Sortable columns
-				{ "orderable": false, "targets": [4, 5, 6] } // Non-sortable columns
+				{ "orderable": true, "targets": [0, 1, 3] }, // Sortable columns
+				{ "orderable": false, "targets": [2, 4, 5, 6] } // Non-sortable columns
 			],
 			language: {
 				emptyTable: "There are no inventory items for this evacuation center.",
