--- a/Pages/disaster/profile/inventory/Index.cshtml
+++ b/Pages/disaster/profile/inventory/Index.cshtml
@@ -140,7 +140,7 @@
 								{
 									<tr style="text-align:center;">
 										<td width="5%">@counter</td>
-										<th width="22%">@item.itemName</th>
+										<td width="22%">@item.itemName</td>
 										<td width="10%">@item.itemType</td>
 										<td width="15%">@item.unitMeasure</td>
 										<td width="18%">@item.remainingQty/@item.qty</td>
